# hedge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  pyproject.toml
include/: hedge.hpp
